--- a/src/css/_content_mediaqueries.scss
+++ b/src/css/_content_mediaqueries.scss
@@ -155,10 +155,8 @@
 
     .content {
       article {
-        margin: 1rem;
-        margin-top: 1rem;
-        padding-top: 2rem;
-        margin-top: 0;
+        padding: 2.5rem 1.5rem;
+        margin: 0;
       }
 
       h1 {
