--- a/src/css/_content_references.scss
+++ b/src/css/_content_references.scss
@@ -31,6 +31,7 @@
   }
   a {
     margin-right: 15px;
+    word-break: break-all;
 
     &:before,
     &:after {
